--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Toy Robot Coding Exercise</h1>
         <p id="error"></p>
         <div>
-            <textarea id="commands" placeholder="Enter commands e.g place (0,0,'NORTH') and hit ENTER"></textarea>
+            <textarea id="commands" placeholder="Enter commands e.g PLACE 0,0,'NORTH' and hit ENTER"></textarea>
         </div>
         <div>
             <button id="formButton">Report</button>
